<resources>
    <string name="app_name">GoodGame</string>
    <string name="main_menu">Main Menu</string>
    <string name="Обучать">Обучать</string>
    <string name="Учиться" />
    <string name="greeting">Здравствуйте!</string>
    <string name="what_do_you_want_to_do">Чем хотите заняться?</string>
    <string name="teach">Обучать</string>
    <string name="study">Учиться</string>
    <string name="choose_level">Выбрать уровень</string>
    <string name="my_achievements">Мои достижения</string>
    <string name="exit">Выход из игры</string>
    <string name="welcome">Добро пожаловать в GoodGame!</string>
    <string name="Students_achievements">Достижения учеников</string>
    <string name="Registrate">Зарегистрировать ученика</string>
    <string name="Delete">Удалить ученика</string>
    <string name="WordList">Просмотреть список слов</string>
    <string name="choose_level_to_play">Choose level to play</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_pswd">Введите пароль</string>
    <string name="game_1">Выбери правильное слово</string>
    <string name="game_2">Переведи слово</string>
    <string name="game_3">Сопоставь слова</string>
    <string name="select_game">Выбери игру! </string>
    <string name="word_translate">Слово-перевод </string>
    <string name="add_english_word">English </string>
    <string name="add_russian_word">Русский </string>
    <string name="welcome_register_student">Здесь Вы можете добавить нового ученика! </string>
    <string name="next">Следующий вопрос</string>
    <string name="hint">Перевод</string>
    <string name="task">Сопоставьте английское слово и его перевод</string>
    <string name="firstName">Введите имя</string>
    <string name="lastName">Введите фамилию</string>
    <string name="achievem">Достижения ученика:</string>
    <string name="rules">Посмотреть правила </string>
    <string name="wellcome_rules">Ознакомьтесь с правилами игр! </string>
</resources>
