<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TeacherMainMenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/students_achievements"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/Students_achievements"
        />
    <Button
        android:id="@+id/registrate"
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:text="@string/Registrate"
        />
    <Button
        android:id="@+id/delete"
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:text="@string/Delete"
        />

    <Button
        android:id="@+id/wordlist"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:onClick="showWords"
        android:text="@string/WordList" />

</LinearLayout>