<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:text="@string/choose_level_to_play"
        />
    <Button
        android:id="@+id/level1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/level_1"
        />
    <Button
        android:id="@+id/level2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/level_2"
        />
    <Button
        android:id="@+id/level3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/level_3"
        />
</LinearLayout>